--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   font-style: normal;
 }
 
+.question-block__title::after,
 .parts-block__title::before,
 .spollers__title::before,
 [class*=_icon-]:before {
@@ -208,7 +209,7 @@ textarea {
   background-color: rgba(232, 232, 233, 0.5);
   width: 100%;
   display: block;
-  padding: 24px 8px;
+  padding: 24px;
 }
 
 .input[placeholder]:not([data-placeholder-nohiden])::-webkit-input-placeholder {
@@ -337,6 +338,9 @@ textarea.input {
 }
 
 .menu__list_mobile .menu__item .menu__link {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   color: #fff;
   font-size: 20px;
   font-weight: 600;
@@ -1383,14 +1387,19 @@ details > summary::-webkit-details-marker {
   line-height: normal;
 }
 
+.tabs-faq {
+  display: -ms-grid;
+  display: grid;
+}
+
 .tabs-faq__navigation {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-  grid-template-columns: repeat(3, 1fr);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-grid-columns: (1fr)[3];
+  grid-template-columns: repeat(3, 1fr);
   -webkit-column-gap: 2.5rem;
      -moz-column-gap: 2.5rem;
           column-gap: 2.5rem;
@@ -1403,8 +1412,6 @@ details > summary::-webkit-details-marker {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  min-height: 104px;
-  height: 100%;
   overflow: hidden;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -1415,6 +1422,10 @@ details > summary::-webkit-details-marker {
 
 .tabs-faq__title._tab-active {
   background-color: #78dccd;
+}
+
+.tabs-faq__title._tab-active span {
+  color: #fff;
 }
 
 .tabs-faq__title._tab-active img {
@@ -1430,7 +1441,6 @@ details > summary::-webkit-details-marker {
   padding: 1.5rem;
   color: rgba(19, 25, 35, 0.5);
   text-align: right;
-  font-size: 24px;
   font-weight: 700;
   line-height: normal;
   position: relative;
@@ -1438,20 +1448,93 @@ details > summary::-webkit-details-marker {
 }
 
 .tabs-faq__title img {
+  display: none;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   -webkit-filter: grayscale(1);
           filter: grayscale(1);
-  width: 50%;
+  width: 55%;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: left;
-     object-position: left;
   aspect-ratio: 180/120;
   position: absolute;
   height: 100%;
   top: 0;
   left: 0;
+}
+
+.question-block {
+  display: -ms-grid;
+  display: grid;
+  row-gap: 2.5rem;
+}
+
+.question-block__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-column-gap: 1.25rem;
+     -moz-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+  cursor: pointer;
+  color: #131923;
+  font-weight: 300;
+  line-height: 130%;
+  /* 41.6px */
+  position: relative;
+}
+
+.question-block__title._spoller-active::after {
+  background-color: #78dccd;
+  border: 1px solid #78dccd;
+  -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  color: #fff;
+  transform: rotate(-90deg);
+}
+
+.question-block__title::after {
+  font-size: 1rem;
+  color: #131923;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  content: "\e900";
+  width: 4.5rem;
+  height: 4.5rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 4.5rem;
+          flex: 0 0 4.5rem;
+  border-radius: 50%;
+  border: 1px solid #131923;
+}
+
+.question-block__body {
+  max-width: 45rem;
+  color: #131923;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.38;
+  /* 137.5% */
 }
 
 @media (min-width: 47.99875em) {
@@ -1565,6 +1648,40 @@ details > summary::-webkit-details-marker {
     border-radius: 50%;
     border: 1px solid #131923;
   }
+
+  .tabs-faq__title {
+    min-height: 104px;
+    height: 100%;
+  }
+
+  .tabs-faq__title img {
+    display: block;
+  }
+
+  .question-block__item:not(:last-child) {
+    border-bottom: 0.0625rem solid #131923;
+  }
+
+  .question-block__title {
+    padding-left: 3.5rem;
+  }
+
+  .question-block__title::before {
+    content: "";
+    background: url("../img/circle.svg") 0 0/100% no-repeat;
+    width: 1.5rem;
+    height: 1.5rem;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    -webkit-transform: translate(0px, -50%);
+        -ms-transform: translate(0px, -50%);
+            transform: translate(0px, -50%);
+  }
+
+  .question-block__body {
+    padding-left: 3.5rem;
+  }
 }
 
 @media (min-width: 61.99875em) and (min-width: 90em) {
@@ -1580,6 +1697,17 @@ details > summary::-webkit-details-marker {
 @media (min-width: 61.99875em) and (min-width: 84.375em) {
   .footer__row:nth-child(1) > * {
     padding-top: 5rem;
+  }
+
+  .question-block__item:not(:last-child) {
+    padding-bottom: 3.5rem;
+  }
+}
+
+@media (min-width: 73.125em) {
+  .tabs-faq__title img {
+    -o-object-position: left;
+       object-position: left;
   }
 }
 
@@ -1668,6 +1796,26 @@ details > summary::-webkit-details-marker {
   }
 
   .parts-block__title:not(:last-child) {
+    margin-bottom: 2.5rem;
+  }
+
+  .faq__title:not(:last-child) {
+    margin-bottom: 6.5rem;
+  }
+
+  .tabs-faq {
+    row-gap: 6.5rem;
+  }
+
+  .tabs-faq__title span {
+    font-size: 1.5rem;
+  }
+
+  .question-block__title {
+    font-size: 2rem;
+  }
+
+  .question-block__title:not(:last-child) {
     margin-bottom: 2.5rem;
   }
 }
@@ -1953,6 +2101,20 @@ details > summary::-webkit-details-marker {
   .menu-open .search__btn {
     display: block;
   }
+
+  .tabs-faq__title span {
+    padding: 0.875rem 2rem;
+    text-align: center;
+    font-weight: 500;
+  }
+
+  .question-block__title::after {
+    width: 3.5rem;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 3.5rem;
+            flex: 0 0 3.5rem;
+    height: 3.5rem;
+  }
 }
 
 @media (max-width: 61.99875em) and (any-hover: none) {
@@ -1990,6 +2152,20 @@ details > summary::-webkit-details-marker {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+
+  .tabs-faq__navigation {
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 0.5rem;
+    -webkit-column-gap: 0.625rem;
+       -moz-column-gap: 0.625rem;
+            column-gap: 0.625rem;
+  }
+
+  .tabs-faq__title:nth-child(1) {
+    -ms-grid-column-span: 2;
+    grid-column: span 2;
   }
 }
 
@@ -2108,6 +2284,26 @@ details > summary::-webkit-details-marker {
 
   .parts-block__title:not(:last-child) {
     margin-bottom: 2rem;
+  }
+
+  .faq__title:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+
+  .tabs-faq {
+    row-gap: 2.5rem;
+  }
+
+  .tabs-faq__title span {
+    font-size: 1rem;
+  }
+
+  .question-block__title {
+    font-size: 1rem;
+  }
+
+  .question-block__title:not(:last-child) {
+    margin-bottom: 1.5rem;
   }
 }
 
@@ -2439,6 +2635,66 @@ details > summary::-webkit-details-marker {
       margin-bottom: calc(2rem + 0.5 * (100vw - 23.4375rem) / 60.9375);
     }
 }
+
+@supports (margin-bottom: clamp( 2rem , 0.2692307692rem  +  7.3846153846vw , 6.5rem )) {
+    .faq__title:not(:last-child) {
+      margin-bottom: clamp( 2rem , 0.2692307692rem  +  7.3846153846vw , 6.5rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 2rem , 0.2692307692rem  +  7.3846153846vw , 6.5rem )) {
+    .faq__title:not(:last-child) {
+      margin-bottom: calc(2rem + 4.5 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
+
+@supports (row-gap: clamp( 2.5rem , 0.9615384615rem  +  6.5641025641vw , 6.5rem )) {
+    .tabs-faq {
+      row-gap: clamp( 2.5rem , 0.9615384615rem  +  6.5641025641vw , 6.5rem );
+    }
+}
+
+@supports not (row-gap: clamp( 2.5rem , 0.9615384615rem  +  6.5641025641vw , 6.5rem )) {
+    .tabs-faq {
+      row-gap: calc(2.5rem + 4 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
+
+@supports (font-size: clamp( 1rem , 0.8076923077rem  +  0.8205128205vw , 1.5rem )) {
+    .tabs-faq__title span {
+      font-size: clamp( 1rem , 0.8076923077rem  +  0.8205128205vw , 1.5rem );
+    }
+}
+
+@supports not (font-size: clamp( 1rem , 0.8076923077rem  +  0.8205128205vw , 1.5rem )) {
+    .tabs-faq__title span {
+      font-size: calc(1rem + 0.5 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
+
+@supports (font-size: clamp( 1rem , 0.6153846154rem  +  1.641025641vw , 2rem )) {
+    .question-block__title {
+      font-size: clamp( 1rem , 0.6153846154rem  +  1.641025641vw , 2rem );
+    }
+}
+
+@supports not (font-size: clamp( 1rem , 0.6153846154rem  +  1.641025641vw , 2rem )) {
+    .question-block__title {
+      font-size: calc(1rem + 1 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
+
+@supports (margin-bottom: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem )) {
+    .question-block__title:not(:last-child) {
+      margin-bottom: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 1.5rem , 1.1153846154rem  +  1.641025641vw , 2.5rem )) {
+    .question-block__title:not(:last-child) {
+      margin-bottom: calc(1.5rem + 1 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
 }
 
 @media (min-width: 62.5em) and (max-width: 90em) {
@@ -2527,11 +2783,27 @@ details > summary::-webkit-details-marker {
       padding-top: calc(3.25rem + 1.75 * (100vw - 23.4375rem) / 60.9375);
     }
 }
+
+@supports (padding-bottom: clamp( 0.625rem , -0.4807692308rem  +  4.7179487179vw , 3.5rem )) {
+    .question-block__item:not(:last-child) {
+      padding-bottom: clamp( 0.625rem , -0.4807692308rem  +  4.7179487179vw , 3.5rem );
+    }
+}
+
+@supports not (padding-bottom: clamp( 0.625rem , -0.4807692308rem  +  4.7179487179vw , 3.5rem )) {
+    .question-block__item:not(:last-child) {
+      padding-bottom: calc(0.625rem + 2.875 * (100vw - 23.4375rem) / 60.9375);
+    }
+}
 }
 
 @media (min-width: 61.99875em) and (max-width: 23.4375em) {
   .footer__row:nth-child(1) > * {
     padding-top: 3.25rem;
+  }
+
+  .question-block__item:not(:last-child) {
+    padding-bottom: 0.625rem;
   }
 }
 
@@ -2583,6 +2855,10 @@ details > summary::-webkit-details-marker {
 
   .tabs-faq__title:hover {
     background-color: #78dccd;
+  }
+
+  .tabs-faq__title:hover span {
+    color: #fff;
   }
 
   .tabs-faq__title:hover img {
